--- a/apps/posts/static/posts/css/style.css
+++ b/apps/posts/static/posts/css/style.css
@@ -17,7 +17,7 @@ body{
     font-family: 'roboto', sans-serif;
 }
 
-.navbar{
+.navbar-new{
     position: fixed;
     top: 0;
     left: 0;
@@ -40,9 +40,11 @@ body{
 }
 
 .brand-img{
-    height: 100%;
+    width: 22%;
     margin-top: 5px;
 }
+
+
 
 .search-box{
     position: absolute;
@@ -65,6 +67,14 @@ body{
 .nav-items{
     height: 22px;
     position: relative;
+}
+
+.users-box{
+    /* display: none; */
+    /* height: 100px; */
+    margin-top: 150px;
+    margin-left: 50px;
+
 }
 
 .icon{
@@ -233,6 +243,13 @@ body{
     font-size: 12px;
 }
 
+.post-comments {
+    margin-left: 20px;
+    text-decoration: none;
+    color: rgba(0, 0, 0, 0.5);
+    font-size: 13px;
+}
+
 .comment-wrapper{
     width: 100%;
     height: 50px;
@@ -243,7 +260,7 @@ body{
 }
 
 .comment-wrapper .icon{
-    height: 30px;
+    height: 18px;
 }
 
 .comment-box{
@@ -319,6 +336,15 @@ body{
     font-weight: 500;
     font-size: 14px;
     color: #000;
+}
+
+.profile-link {
+    text-decoration: none;
+}
+
+.menu-link {
+    text-decoration: none;
+    color: black;
 }
 
 .sub-text{
