--- a/apps/posts/templates/index.html
+++ b/apps/posts/templates/index.html
@@ -9,18 +9,24 @@
     <script src='https://code.jquery.com/jquery-3.7.0.min.js'></script>
     <script src="https://kit.fontawesome.com/21a9f74a1b.js" crossorigin="anonymous"></script>
     <script src="{%static 'posts/js/like.js' %}"></script>
-    <script src="{%static 'posts/js/comment.js' %}"></script>
+    <script src="{%static 'posts/js/search.js' %}"></script>
+    {% comment %} <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous"> {% endcomment %}
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    {% comment %} <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script> {% endcomment %}
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+
     <title>Document</title>
 </head>
 <body>
-    <nav class="navbar">
+    <nav class="navbar-new">
         <div class="nav-wrapper">
-            <img src="{%static 'posts/images/instagram_logo.png'}" class="brand-img" alt="">
-            <input type="text" class="search-box" placeholder="search">
+            <img src="{%static 'posts/images/instagram_logo.png'%}" class="brand-img" alt="">
+            <input type="text" id="search-input" class="search-box" placeholder="search">
+            <div class='users-box'></div>
             <div class="nav-items">
-                <a href="{% url 'profile' user.profile.pk %}"><i class="icon fas fa-house"></i></a>
+                <a class='menu-link' href="{% url 'profile' user.profile.pk %}"><i class="icon fas fa-house"></i></a>
                 <i class="icon fas fa-paper-plane"></i>
-                <a href="{% url 'post_create' %}"><i class="icon fas fa-square-plus"></i></a>
+                <a class='menu-link' href="{% url 'post_create' %}"><i class="icon fas fa-square-plus"></i></a>
                 <i class="icon fas fa-compass"></i>
                 <i class="icon fas fa-heart"></i>
                 <div class="icon user-profile"></div>
@@ -65,9 +71,36 @@
                         </a>
                         <i class="options fas fa-ellipsis" ></i>
                     </div>
-                    {% for photo in post.photos.all %}
-                    <img src="{{photo.photo.url}}" class="post-image" alt="">
-                    {% endfor %}
+                    
+                    {% if post.photos.count > 1 %}
+                        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                            <div class="carousel-inner">
+                                {% for photo in post.photos.all %}
+                                {% if photo == post.photos.all.0 %}
+                                <div class="carousel-item active">
+                                    <img src="{{photo.photo.url}}" class="post-image" alt="">
+                                </div>
+                                {% else %}
+                                <div class="carousel-item">
+                                    <img src="{{photo.photo.url}}" class="post-image" alt="">
+                                </div>
+                                {% endif %}
+                                {% endfor %}
+                            </div>
+                            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                              <span class="sr-only">Previous</span>
+                            </a>
+                            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                              <span class="sr-only">Next</span>
+                            </a>
+                        </div>
+                    {% else %}
+                        {% for photo in post.photos.all %}
+                        <img src="{{photo.photo.url}}" class="post-image" alt="">
+                        {% endfor %}
+                    {% endif %}
                     <div class="post-content">
                         <div class="reaction-wrapper">
                             
@@ -83,8 +116,9 @@
                         </div>
                         <p class="likes" id="likes-count-{{post.pk}}">{{post.likes.count}} likes</p>
                         <p class="description"><span>{{post.author.username}} </span>{{post.description}}</p>
-                        <p class="post-time">{{post.created_at}}</p>
+                        <p class="post-time">{{post.created_at|timesince}} ago</p>
                     </div>
+                    <a href='#' class='post-comments'>Show comments({{post.comments.count}})</a>
                     <div class="comment-wrapper">
                         <i class="icon fa-regular fa-face-smile"></i>
                         <input type="text" class="comment-box" placeholder="Add a comment" oninput="checkInput(this)">
@@ -97,74 +131,6 @@
         </div>
     </section>
 
-    {% comment %} <section class="main">
-        <div class="wrapper"> 
-            // left col element
-            <div class="right-col">
-                <div class="profile-card">
-                    <div class="profile-pic">
-                        <img src="" alt="">
-                    </div>
-                    <div>
-                        <p class="username">modern_web_channel</p>
-                        <p class="sub-text">kunaal kumar</p>
-                    </div>
-                    <button class="action-btn">switch</button>
-                </div>
-                <p class="suggestion-text">Suggestions for you</p>
-                <div class="profile-card">
-                    <div class="profile-pic">
-                        <img src="" alt="">
-                    </div>
-                    <div>
-                        <p class="username">modern_web_channel</p>
-                        <p class="sub-text">followed bu user</p>
-                    </div>
-                    <button class="action-btn">follow</button>
-                </div>
-                <div class="profile-card">
-                    <div class="profile-pic">
-                        <img src="" alt="">
-                    </div>
-                    <div>
-                        <p class="username">modern_web_channel</p>
-                        <p class="sub-text">followed bu user</p>
-                    </div>
-                    <button class="action-btn">follow</button>
-                </div>
-                <div class="profile-card">
-                    <div class="profile-pic">
-                        <img src="" alt="">
-                    </div>
-                    <div>
-                        <p class="username">modern_web_channel</p>
-                        <p class="sub-text">followed bu user</p>
-                    </div>
-                    <button class="action-btn">follow</button>
-                </div>
-                <div class="profile-card">
-                    <div class="profile-pic">
-                        <img src="" alt="">
-                    </div>
-                    <div>
-                        <p class="username">modern_web_channel</p>
-                        <p class="sub-text">followed bu user</p>
-                    </div>
-                    <button class="action-btn">follow</button>
-                </div>
-                <div class="profile-card">
-                    <div class="profile-pic">
-                        <img src="" alt="">
-                    </div>
-                    <div>
-                        <p class="username">modern_web_channel</p>
-                        <p class="sub-text">followed bu user</p>
-                    </div>
-                    <button class="action-btn">follow</button>
-                </div>
-            </div>
-        </div>
-    </section> {% endcomment %}
     <script>
             function checkInput(input){
                 let commentField = $(input)[0]
@@ -195,6 +161,7 @@
                     },
                 })
             }
+            
     </script>
 </body>
 </html>
