--- a/apps/profiles/static/profiles/css/style.css
+++ b/apps/profiles/static/profiles/css/style.css
@@ -1,4 +1,4 @@
-:root {
+html {
     font-size: 10px;
 }
 
@@ -71,6 +71,8 @@ img {
 
 .profile-image img {
     border-radius: 50%;
+    width: 200px;
+    height: 200px;
 }
 
 .profile-user-settings,
